src/objects/Evaluation__c.object
<CustomObject>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                    <default>true</default>
                    <label>Medium</label>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>Data Prep</fullName>
                </value>
                <value>
                    <fullName>Ready for Eval</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Not Processed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>associateHours__c</fullName>
        <label>Associate Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>caseOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Evaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Evaluations</relationshipLabel>
        <relationshipName>Evaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>commentsNotes__c</fullName>
        <label>Comments/Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>completionDate__c</fullName>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>hasAttachment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Attachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Evaluations</relationshipLabel>
        <relationshipName>Evaluations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sender__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Submittal source contact from related case record</description>
        <inlineHelpText>Submittal source contact from related case record</inlineHelpText>
        <label>Sender</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Evaluations</relationshipLabel>
        <relationshipName>EvaluationSender</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sharedDrivePath__c</fullName>
        <label>Shared Drive Path</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>srpInvestmentTeamReviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SRP Investment Team Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>EvaluationsReviewer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>startDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Evaluation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>opportunity__c</columns>
        <columns>Status__c</columns>
        <columns>startDate__c</columns>
        <columns>completionDate__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>srpInvestmentTeamReviewer__c</columns>
        <columns>hasAttachment__c</columns>
        <columns>commentsNotes__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Data_Prep</fullName>
        <columns>NAME</columns>
        <columns>opportunity__c</columns>
        <columns>Status__c</columns>
        <columns>startDate__c</columns>
        <columns>completionDate__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>srpInvestmentTeamReviewer__c</columns>
        <columns>hasAttachment__c</columns>
        <columns>commentsNotes__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Data Prep</value>
        </filters>
        <label>Data Prep</label>
    </listViews>
    <listViews>
        <fullName>Former_Employee_Evaluation</fullName>
        <filterScope>Queue</filterScope>
        <label>Former Employee</label>
        <queue>Former_Employee</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>In_Progress</fullName>
        <columns>NAME</columns>
        <columns>opportunity__c</columns>
        <columns>Status__c</columns>
        <columns>startDate__c</columns>
        <columns>completionDate__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>srpInvestmentTeamReviewer__c</columns>
        <columns>hasAttachment__c</columns>
        <columns>commentsNotes__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>In Progress</label>
    </listViews>
    <listViews>
        <fullName>Not_Started</fullName>
        <columns>NAME</columns>
        <columns>opportunity__c</columns>
        <columns>Status__c</columns>
        <columns>startDate__c</columns>
        <columns>completionDate__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>srpInvestmentTeamReviewer__c</columns>
        <columns>hasAttachment__c</columns>
        <columns>commentsNotes__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Not Started</value>
        </filters>
        <label>Not Started</label>
    </listViews>
    <listViews>
        <fullName>Pending</fullName>
        <columns>NAME</columns>
        <columns>opportunity__c</columns>
        <columns>Status__c</columns>
        <columns>startDate__c</columns>
        <columns>completionDate__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>srpInvestmentTeamReviewer__c</columns>
        <columns>hasAttachment__c</columns>
        <columns>commentsNotes__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <label>Pending</label>
    </listViews>
    <listViews>
        <fullName>Pre_In_Progress</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>opportunity__c</columns>
        <columns>Status__c</columns>
        <columns>startDate__c</columns>
        <columns>completionDate__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>srpInvestmentTeamReviewer__c</columns>
        <columns>hasAttachment__c</columns>
        <columns>commentsNotes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Not Started,Data Prep,Ready for Eval</value>
        </filters>
        <label>Pre In Progress</label>
    </listViews>
    <listViews>
        <fullName>Ready_for_Eval</fullName>
        <columns>NAME</columns>
        <columns>opportunity__c</columns>
        <columns>Status__c</columns>
        <columns>startDate__c</columns>
        <columns>completionDate__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>srpInvestmentTeamReviewer__c</columns>
        <columns>hasAttachment__c</columns>
        <columns>commentsNotes__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Ready for Eval</value>
        </filters>
        <label>Ready for Eval</label>
    </listViews>
    <listViews>
        <fullName>Ready_for_Eval2</fullName>
        <columns>NAME</columns>
        <columns>opportunity__c</columns>
        <columns>Status__c</columns>
        <columns>startDate__c</columns>
        <columns>completionDate__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>srpInvestmentTeamReviewer__c</columns>
        <columns>hasAttachment__c</columns>
        <columns>commentsNotes__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Ready for Eval</value>
        </filters>
        <label>Ready for Eval</label>
    </listViews>
    <listViews>
        <fullName>Staffing_Evaluation</fullName>
        <filterScope>Queue</filterScope>
        <label>Staffing</label>
        <queue>Staffing</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>Eval-{000000}</displayFormat>
        <label>Evaluation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Evaluations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Has_Opportunity</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(opportunity__c)</errorConditionFormula>
        <errorMessage>Evaluation must have an opportunity record</errorMessage>
    </validationRules>
</CustomObject>